log
Thu 14 Sep 2023 07:00:35 PM UTC: 
 tests:  1|8
total_score: 0/70
55fecf4
Thu 14 Sep 2023 07:04:46 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
946b236
Thu 14 Sep 2023 07:06:03 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  3|8
total_score: 0/70
d33b4aa
Thu 14 Sep 2023 07:06:29 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:48:23: error: ‘lt’ undeclared (first use in this function)
   48 |     map->lower_than = lt;
      |                       ^~
treemap.c:48:23: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
13076a9
Thu 14 Sep 2023 07:06:55 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
9e61234
Thu 14 Sep 2023 07:16:42 PM UTC: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
8cda964
Thu 14 Sep 2023 07:17:36 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
cd788dc
